@@ -82,6 +82,8 @@ export(renameCol)
 export(rle2)
 export(sampleBy)
 export(sample_by)
+export(sapplyBy)
+export(sapply_by)
 export(set_covariate_val)
 export(set_xlevels)
 export(specialize)
