@@ -1,6 +1,6 @@
 #######################################################################
 #'
-#' @title Formula based version of lapply.
+#' @title Formula based version of lapply and sapply
 #' @description This function is a wrapper for calling lapply on the
 #'     list resulting from first calling splitBy.
 #' @name by-lapply
@@ -10,6 +10,9 @@
 #' @param data A dataframe.
 #' @param FUN A function to be applied to each element in the splitted
 #'    list, see 'Examples' below.
+#' @param ... optional arguments to FUN.
+#' @param USE.NAMES Same as for `sapply`
+#' @param simplify Same as for `sapply`
 #'
 #' @return A list.
 #'
@@ -20,25 +23,18 @@
 #' @keywords utilities
 #'
 #' @examples
-#' data(dietox)
-#' 
-#' ## Calculate weekwise feed efficiency = weight gain / feed intake
-#' dietox <- orderBy(~Pig + Time, data=dietox)
-#' v <- lapplyBy(~Pig, data=dietox,
-#'               function(d) c(NA, diff(d$Weight) / diff(d$Feed)))
-#' dietox$FE <- unlist(v)
-#' 
-#' ## Technically this is the same as 
-#' dietox <- orderBy(~Pig + Time, data=dietox)
-#' wdata <- splitBy(~Pig, data=dietox)
-#' v <- lapply(wdata, function(d) c(NA, diff(d$Weight)/diff(d$Feed)))
-#' dietox$FE <- unlist(v)
-#' 
+#' fun <- function(x) range(x$uptake)
+#' lapplyBy(~Treatment + Type, data=CO2, FUN=fun)
+#' sapplyBy(~Treatment + Type, data=CO2, FUN=fun)
+#'
+#' # Same as
+#' lapply(splitBy(~Treatment + Type, data=CO2), FUN=fun)
+
 
 
 #' @export
 #' @rdname by-lapply
-lapply_by <- function(data, formula, FUN=mean){
+lapply_by <- function(data, formula, FUN, ...){
     cl   <- match.call(expand.dots = TRUE)
     cl[[2]] <- formula
     cl[[3]] <- data
@@ -49,14 +45,42 @@ lapply_by <- function(data, formula, FUN=mean){
 
 #' @export
 #' @rdname by-lapply
-lapplyBy <- function (formula, data = parent.frame(), FUN) 
+lapplyBy <- function (formula, data = parent.frame(), FUN, ...) 
 {
     out <- splitBy(formula, data = data)
     gr  <- unique(attr(out, "grps"))
     ##print(gr)    
-    out <- lapply(out, FUN)
+    out <- lapply(out, FUN, ...)
     out <- out[gr]
     out
 }
+
+
+#' @export
+#' @rdname by-lapply
+sapply_by <- function(data, formula, FUN, ..., simplify = TRUE, USE.NAMES = TRUE){
+    cl   <- match.call(expand.dots = TRUE)
+    cl[[2]] <- formula
+    cl[[3]] <- data
+    names(cl)[2:3] <- c("formula", "data")
+    cl[[1]] <- as.name("sapplyBy")
+    eval(cl)
+}
+
+#' @export
+#' @rdname by-lapply
+sapplyBy <- function (formula, data = parent.frame(), FUN, ..., simplify = TRUE, USE.NAMES = TRUE) 
+{
+    out <- splitBy(formula, data = data)
+    gr  <- unique(attr(out, "grps"))
+    ##print(gr)    
+    #print(out)
+    #print(FUN)
+    out <- sapply(out, FUN, ..., simplify=simplify, USE.NAMES=USE.NAMES)
+    if (!simplify)
+        out <- out[gr] 
+    out
+}
+
 
 
