@@ -1,6 +1,8 @@
 doBy v4.6.8 (Release date: 2020-09-xx)
 ========================================
 
+* sapplyBy / sapply_by added
+
 * subSeq works on factors now (coerces to character)
 
 * sub_seq added; synonymous to subSeq
